# python-playground

./: .gitignore  README.md  car_data_analysis_competition.ipynb  langgraph.ipynb  main.py  mcp_test.ipynb  mermaid.md  play_ground.ipynb  playground.ipynb  pyproject.toml  setup.txt  temp.txt  test.db
customer_tier_classification/: eda.ipynb  test.ipynb
customer_tier_classification/open/erd/: missing_summary.csv  nunique.csv
customer_tier_classification/open/ml_outputs/: best_model.txt  cv_results.csv  permutation_importance.csv  predictions_real_test.csv  predictions_test.csv  test_metrics.txt
file_declutter/: file_decultter.ipynb
memo/: qa-rag.txt  vll-serving.txt
milvus/: sdk_test.ipynb
milvus/volumes/milvus/etcd/member/snap/: db
milvus/volumes/milvus/rdb_data/: 000011.sst  000017.sst  IDENTITY  LOG  LOG.old.1758086587688678  LOG.old.1758168229141374  MANIFEST-000018
milvus/volumes/milvus/rdb_data_meta_kv/: 000009.sst  000015.sst  IDENTITY  LOG  LOG.old.1758086587662502  LOG.old.1758168229113468  MANIFEST-000016
traffic/: traffic.ipynb
vim_test/: vim_usage_guide.md
web_test/: main.py
web_test/static/: index.html  script.js
webtest/static/: style.css
