[project]
name = "python-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docxtpl>=0.20.1",
    "duckduckgo-mcp-server>=0.1.1",
    "fastapi>=0.116.1",
    "gdown>=5.2.0",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.10",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "langsmith>=0.4.21",
    "lightgbm>=4.6.0",
    "lorem>=0.1.1",
    "matplotlib>=3.10.6",
    "mcp-server-sqlite>=2025.4.25",
    "mcp-server-time>=2025.8.4",
    "openai>=1.101.0",
    "pandas>=2.3.2",
    "pymilvus==2.6.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.35.0",
    "xgboost>=3.0.4",
]
